admin-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui
  labels:
    app: admin-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin-ui
  template:
    metadata:
      labels:
        app: admin-ui
    spec:
      containers:
        - name: admin-ui-container
          image: adittt/mernstack_admin_dashboard:build-14
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: "admin-ui"
spec:
  selector:
    app: admin-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
